@@ -13,6 +13,8 @@
   <url>http://www.springframework.org/osgi</url>
 
   <properties>
+ 	 <spring.osgi.license.loc>../../..</spring.osgi.license.loc>
+  
      <spring.osgi.export.pkg> org.springframework.osgi.samples.weather</spring.osgi.export.pkg>
   </properties>
 </project>
