@@ -8,11 +8,12 @@
   </parent>
   <groupId>org.springframework.osgi.samples</groupId>
   <artifactId>weather-service</artifactId>
-  <packaging>jar</packaging>
+  <packaging>bundle</packaging>
   <name>Spring OSGi Weather Sample Service</name>
   <url>http://www.springframework.org/osgi</url>
 
   <properties>
+	 <spring.osgi.license.loc>../../..</spring.osgi.license.loc>  
      <spring.osgi.export.pkg>org.springframework.osgi.samples.weather.service</spring.osgi.export.pkg>
   </properties>
   
@@ -25,19 +26,4 @@
     </dependency>
 
   </dependencies>
-
-  <build>
-
-	<plugins>
-	<plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
-          </archive>
-        </configuration>
-      </plugin>
-	</plugins>
-  </build>	
 </project>
