@@ -48,13 +48,13 @@
 	<!-- Note that this is not a real bundle - we are creating it on the fly from a regular jar -->
 	<extension:virtual-bundle id="weatherServiceVirtualBundle" depends-on="weatherDaoBundle"
 	                     location="file:${localRepository}/org/springframework/osgi/samples/weather-service/${pom.version}/weather-service-${pom.version}.jar"
-	                     version="1.0" group-id="org.springframework.osgi.samples.weather" artifact-id="service">
+	                     version="${bundle.version}" group-id="org.springframework.osgi.samples.weather" artifact-id="service">
 		<extension:imports>
-			<extension:package name="org.springframework.osgi.samples.weather.dao" version="0.0"/>
+			<extension:package name="org.springframework.osgi.samples.weather.dao" version="${bundle.version}"/>
 			<extension:package name="org.springframework.osgi.config"/>
 		</extension:imports>
 		<extension:exports>
-			<extension:package name="org.springframework.osgi.samples.weather.service" version="0.0.0"/>
+			<extension:package name="org.springframework.osgi.samples.weather.service" version="${bundle.version}"/>
 		</extension:exports>
 	</extension:virtual-bundle>
 
